--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="font-Outfit bg-white p-3 rounded-xl h-auto w-64 flex flex-col justify-center items-center">
     <div>
     <div>
-      <img class="h-auto rounded-xl" src="/image-qr-code.png" alt="Qr-code Image">
+      <img src="/image-qr-code.png" class="h-auto rounded-xl"  alt="Qr-code Image"></img>
     </div>
     <div class="mt-4 mb-4">
       <div class="text-slate-900 text-center font-bold text-[15px]">Improve your front-end skills by building projects</div>
