--- a/index.html
+++ b/index.html
@@ -12,16 +12,14 @@
   <title>Frontend Mentor | QR code component</title>
 </head>
 <body class="bg-slate-300 flex flex-col items-center h-screen justify-center">
-  <div class="font-Outfit bg-white p-3 rounded-xl h-auto w-64 flex flex-col justify-center items-center">
-    <div>
-    <div>
+  <main class="font-Outfit bg-white p-3 rounded-xl h-auto w-64 flex flex-col justify-center items-center">
+    <figure>
       <img src="image-qr-code.png" class="h-auto rounded-xl"  alt="Qr-code Image">
-    </div>
-    <div class="mt-4 mb-4">
-      <div class="text-slate-900 text-center font-bold text-[15px]">Improve your front-end skills by building projects</div>
-      <div class="text-slate-500 text-center font-normal text-[15px] mt-3">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</div>
-    </div>
-    </div>
-  </div>
+    </figure>
+    <section class="mt-4 mb-4">
+      <h1 class="text-slate-900 text-center font-bold text-[15px]">Improve your front-end skills by building projects</h1>
+      <p class="text-slate-500 text-center font-normal text-[15px] mt-3">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+    </section>
+  </main>
 </body>
 </html>
